2006-12-16  Per Bothner  <per@bothner.com>

	* KawaXMLReader.java (parse): Use new XMLParser.XMLStreamReader.

2006-12-15  Per Bothner  <per@bothner.com>

	* ContentConsumer.java (endStartTag): Make public.

2006-12-14  Per Bothner  <per@bothner.com>

	* KawaXMLReader.java: Update for new XMLParser API.
	Don't implement Locator - that is now done by XMLFilter.

	* ConsumeSAXHandler.java: Remove class.  No longer needed now
	that XMLFIlter implements DocumentHandler and ContentHandler.
	* Makefile.am: Update accordingly.

2006-12-06  Per Bothner  <per@bothner.com>

	* ConsumeSAXHandler.java: Update for renamed Consumer methods.
	* ContentConsumer.java: Likewise.
	* KawaXMLReader.java: Likewise.

2006-12-05  Per Bothner  <per@bothner.com>

	* ConsumeSAXHandler.java: Update append -> write.
	* ContentConsumer.java: Fix Consumer-churn-related bitrot.

2006-11-18  Per Bothner  <per@bothner.com>

	* ConsumeSAXHandler.java: Update writeChars -> append.
	* ContentConsumer.java: Replace writeChars by append.

2006-11-17  Per Bothner  <per@bothner.com>

	* ContentConsumer.java: Update writeChar -> append.

2006-11-09  Per Bothner  <per@bothner.com>

	* ConsumeSAXHandler.java: Update for Consumer changes.
	* ContentConsumer.java: Likewise.

2006-05-26  Per Bothner  <per@bothner.com>

	* KawaXMLReader.java (getPublicId): Get from xmlParser.
	(getSystemId): Likewise.

2006-03-01  Per Bothner  <per@bothner.com>

	* ContentConsumer.java: No longer implement Attributes.
	(attributes): Use new AttributesImpl field instead.

2003-10-29  Per Bothner  <per@bothner.com>

	* ContentConsumer.java (beginGroup):  Handle XName.

2003-06-27  Per Bothner  <per@bothner.com>

	* ContentConsumer.java (endGroup):  Add flushStrBuffer call.

2003-06-05  Per Bothner  <per@bothner.com>

	* ContentConsumer.java:  Fix some small bugs.
	(beginAttribute):  Grab localname and uri.

2003-05-31  Per Bothner  <per@bothner.com>

	* ContentConsumer.java (endGroup):  Remove incorrect/redundant test.